# art-retrieval

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
backend/scripts/: build_embeddings.py  chatgpt_compare_embeddings.py  compare_embeddings.py  get_results.py
backend/src/: api_calls.py  artic.py  database_creation.py  sig_lip2.py
backend/src/embeddings/: chroma_db.py  image_embedder.py  pipeline.py  text_embedder.py
backend/tests/: test_api_calls.py
frontend/: main.py  widgets.py
notebooks/: evaluation.ipynb
scripts/: build_embeddings.py  evaluate.py  run_app.py  show_text_db.py
src/backend/: query.py
src/backend/embeddings/: chroma_db.py  image_embedder.py  text_embedder.py
src/frontend/: app.py  constants.py  image_manager.py  utils.py  widgets.py
